iniciando cabecalho menu

--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cards Tamanhos Diferentes</title>
+    <title>Desafio Poiema</title>
   </head>
   <body>
+
+    <!-- CABEÇALHO-->
+    <header>
+      <div class="cabecalho">
+        <img class="logo" src="../Desafio-Poiema/assets/Logo.svg" alt="logo Landify">
+        <a class="cabecalho-menu-item" href="#"> Recursos </a>
+        <a class="cabecalho-menu-item" href="#"> Preços  </a>
+        <a class="cabecalho-menu-item" href="#"> Carreiras  </a>
+        <a class="cabecalho-menu-item" href="#"> Ajuda </a>
+      </div>
+    </header>
+    <main>
+
+    </main>
+
+
     <!--SEÇÃO CARDS-->
     <section class="cards">
       <div class="texto-principal">
