cabeçalho e primeiro container html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,42 @@
         <a class="cabecalho-menu-item" href="#"> Preços  </a>
         <a class="cabecalho-menu-item" href="#"> Carreiras  </a>
         <a class="cabecalho-menu-item" href="#"> Ajuda </a>
+        <img class="play-store" src="../Desafio-Poiema/assets/Store badge.svg" alt="logo play store">
+        <img class="app-store" src="../Desafio-Poiema/assets/Store badge (1).svg" alt="logo app store">
       </div>
     </header>
-    <main>
 
+  <!-- INICIO CONTEUDO-->
+    <main> 
+      <!-- inicio lado esquerdo conteudo inicial-->
+      <section class="conteudo">
+        <div class="column-1">
+          <h1 class="conteudo-inicial">
+            A maneira mais fácil de gerenciar projetos
+          </h1>
+          <h6 class="conteudo-inicial-menor">
+            Desde as pequenas coisas até a visão geral, organiza o trabalho para que as equipes saibam o que fazer, por que é importante e como concluí-lo.
+          </h6>
+          <a class="btn-comecar" href="#">
+            Começar
+          </a>
+          <img class="logo-assistir" src="../Desafio-Poiema/assets/Icon.svg" alt="icone de play video">
+          <a class="btn-assistir-texto" href="#">
+            Assistir Vídeo 
+          </a>
+          <img class="barra-lilás-esquerda" src="../Desafio-Poiema/assets/Left Band 2 (1).svg" alt="barra lilás">
+          <img class="barra-azul-esquerda" src="../Desafio-Poiema/assets/Left Band 1 (1).svg" alt="barra azul">
+           <!-- fim inicio lado esquerdo conteudo inicial-->
+        </div>
+        <!-- inicio lado direito conteudo inicial-->
+        <div class="column-2">
+          <img class="mockup-inicial" src="../Desafio-Poiema/assets/Mobile.png" alt="celular apresentando plataforma">
+          <img class="barra-lilás-direita" src="../Desafio-Poiema/assets/Left Band 2 (1).svg" alt="barra lilás">
+          <img class="barra-roxa-direita" src="../Desafio-Poiema/assets/Right Band 2 (2).svg" alt="barra roxa">
+          <img class="barra-azul-direita" src="../Desafio-Poiema/assets/Left Band 1 (1).svg" alt="barra azul">
+        </div>
+         <!-- fim lado direito conteudo inicial-->
+      </section>
     </main>
 
 
