--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <img class="app-store" src="../Desafio-Poiema/assets/Store badge (1).svg" alt="logo app store">
       </div>
     </header>
+    <!--FIM CABECALHO-->
 
   <!-- INICIO CONTEUDO-->
     <main> 
@@ -60,6 +61,19 @@
         </div>
          <!-- fim lado direito conteudo inicial-->
       </section>
+
+      <!-- SEÇÃO DE LOGOS INICIAL -->
+      <section class="logo-inicial">
+        <div class="logos">
+          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
+        </div>
+      </section>
+
     </main>
 
 
