seção recursos personalizados

--- a/index.html
+++ b/index.html
@@ -73,7 +73,16 @@
           <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
         </div>
       </section>
+      <!-- FIM SEÇÃO DE LOGOS INICIAL -->
 
+      <!--SEÇÃO RECURSOS PERSONALIZADOS-->
+      <section class="recursos">
+        <div class="personalizados">
+          <h3 class="principal-personalizado"> Recursos Personalizados </h3>
+          <h6 class="principal-personalizado-paragrafo"> Lorem ipsum é um texto fictício comumente usado para demonstrar elementos gráficos de um documento ou apresentação visual. 
+         </h6>
+        </div>
+      </section>
     </main>
 
 
