personalizado item teste

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
       <!-- SEÇÃO DE LOGOS INICIAL -->
       <section class="logo-inicial">
         <div class="logos">
-          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
-          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo "> <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
           <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
           <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
           <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
@@ -81,8 +80,16 @@
           <h3 class="principal-personalizado"> Recursos Personalizados </h3>
           <h6 class="principal-personalizado-paragrafo"> Lorem ipsum é um texto fictício comumente usado para demonstrar elementos gráficos de um documento ou apresentação visual. 
          </h6>
+         <p class="personalizado-item" href="#"> teste </a>
+          <p class="personalizado-item" href="#"> teste </a>
+            <p class="personalizado-item" href="#"> teste </a>
+              <p class="personalizado-item" href="#"> teste </a>
+                <p class="personalizado-item" href="#"> teste </a>
         </div>
       </section>
+       <!--SEÇÃO RECURSOS PERSONALIZADOS-->
+
+  
     </main>
 
 
