--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <header>
       <div class="cabecalho">
         <img class="logo" src="../Desafio-Poiema/assets/Logo.svg" alt="logo Landify">
-        <a class="cabecalho-menu-item" href="#"> Recursos </a>
-        <a class="cabecalho-menu-item" href="#"> Preços  </a>
-        <a class="cabecalho-menu-item" href="#"> Carreiras  </a>
-        <a class="cabecalho-menu-item" href="#"> Ajuda </a>
+           <a class="cabecalho-menu-item" href="#"> Recursos </a>
+            <a class="cabecalho-menu-item" href="#"> Preços  </a>
+              <a class="cabecalho-menu-item" href="#"> Carreiras  </a>
+               <a class="cabecalho-menu-item" href="#"> Ajuda </a>
         <img class="play-store" src="../Desafio-Poiema/assets/Store badge.svg" alt="logo play store">
         <img class="app-store" src="../Desafio-Poiema/assets/Store badge (1).svg" alt="logo app store">
       </div>
@@ -49,15 +49,15 @@
             Assistir Vídeo 
           </a>
           <img class="barra-lilás-esquerda" src="../Desafio-Poiema/assets/Left Band 2 (1).svg" alt="barra lilás">
-          <img class="barra-azul-esquerda" src="../Desafio-Poiema/assets/Left Band 1 (1).svg" alt="barra azul">
+           <img class="barra-azul-esquerda" src="../Desafio-Poiema/assets/Left Band 1 (1).svg" alt="barra azul">
            <!-- fim inicio lado esquerdo conteudo inicial-->
         </div>
         <!-- inicio lado direito conteudo inicial-->
         <div class="column-2">
-          <img class="mockup-inicial" src="../Desafio-Poiema/assets/Mobile.png" alt="celular apresentando plataforma">
-          <img class="barra-lilás-direita" src="../Desafio-Poiema/assets/Left Band 2 (1).svg" alt="barra lilás">
-          <img class="barra-roxa-direita" src="../Desafio-Poiema/assets/Right Band 2 (2).svg" alt="barra roxa">
-          <img class="barra-azul-direita" src="../Desafio-Poiema/assets/Left Band 1 (1).svg" alt="barra azul">
+           <img class="mockup-inicial" src="../Desafio-Poiema/assets/Mobile.png" alt="celular apresentando plataforma">
+             <img class="barra-lilás-direita" src="../Desafio-Poiema/assets/Left Band 2 (1).svg" alt="barra lilás">
+               <img class="barra-roxa-direita" src="../Desafio-Poiema/assets/Right Band 2 (2).svg" alt="barra roxa">
+                 <img class="barra-azul-direita" src="../Desafio-Poiema/assets/Left Band 1 (1).svg" alt="barra azul">
         </div>
          <!-- fim lado direito conteudo inicial-->
       </section>
@@ -65,11 +65,12 @@
       <!-- SEÇÃO DE LOGOS INICIAL -->
       <section class="logo-inicial">
         <div class="logos">
-          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo "> <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
-          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
-          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
-          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
-          <img class="logo-item" src="../Desafio-Poiema/assets/" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/airbnb.svg" alt="logo "> 
+          <img class="logo-item" src="../Desafio-Poiema/assets/hubspot.svg" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/google.svg" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/microsoft.png" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/walmart.svg" alt="logo ">
+          <img class="logo-item" src="../Desafio-Poiema/assets/fedex.svg" alt="logo ">
         </div>
       </section>
       <!-- FIM SEÇÃO DE LOGOS INICIAL -->
@@ -77,19 +78,56 @@
       <!--SEÇÃO RECURSOS PERSONALIZADOS-->
       <section class="recursos">
         <div class="personalizados">
-          <h3 class="principal-personalizado"> Recursos Personalizados </h3>
+          <!--cabecalho introduçao recursos personalizados-->
+          <h2 class="principal-personalizado"> Recursos Personalizados </h3>
           <h6 class="principal-personalizado-paragrafo"> Lorem ipsum é um texto fictício comumente usado para demonstrar elementos gráficos de um documento ou apresentação visual. 
          </h6>
-         <p class="personalizado-item" href="#"> teste </a>
-          <p class="personalizado-item" href="#"> teste </a>
-            <p class="personalizado-item" href="#"> teste </a>
-              <p class="personalizado-item" href="#"> teste </a>
-                <p class="personalizado-item" href="#"> teste </a>
+            <!--cabecalho introduçao recursos personalizados-->
+
+         <!--inicio primeiro container da seção recursos personalizados-->
+         <div class="container-1-personalizados">
+          <!--logos recursos container 1-->
+          <img class="personalizado-logo" src="../Desafio-Poiema/assets/Base feature icon.svg">
+          <img class="personalizado-logo" src="../Desafio-Poiema/assets/Base feature icon.png">
+          <img class="personalizado-logo" src="../Desafio-Poiema/assets/Base feature icon (1).png">
+           <!--fim logos recursos container 1-->
+
+           <!-- inicio titulo e paragrafos recursos container 1-->
+          <h3 class="personalizado-texto"> Fluxo de trabalho robusto</h3>
+            <h6 class="personalizado-texto-item"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</h6>
+          <h3 class="personalizado-texto"> Flexibilidade </h3>
+            <h6 class="personalizado-texto-item"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</h6>
+          <h3 class="personalizado-texto"> Fácil de usar </h3>
+          <h6 class="personalizado-texto-item"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</h6>
+         </div>
+          <!-- fim titulo e paragrafos recursos container 1-->
+
+          <div class="container-2-personalizados">
+            <!--logos recursos container 2-->
+            <img class="personalizado-logo-item" src="../Desafio-Poiema/assets/Base feature icon (2).png">
+            <img class="personalizado-logo-item" src="../Desafio-Poiema/assets/Base feature icon (3).png">
+            <img class="personalizado-logo-item" src="../Desafio-Poiema/assets/Base feature icon (4).png">
+             <!--fim logos recursos container 2-->
+  
+             <!-- inicio titulo e paragrafos recursos container 2-->
+            <h3 class="personalizado-texto-title"> Múltiplas Layouts </h3>
+              <h6 class="personalizado-texto-paragrafo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</h6>
+            <h3 class="personalizado-texto-title"> Melhres componentes</h3>
+              <h6 class="personalizado-texto-paragrafo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</h6>
+            <h3 class="personalizado-texto-title"> Bem organizado </h3>
+            <h6 class="personalizado-texto-paragrafo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</h6>
+           </div>
+
+
+          
+          
+
+
+
+
         </div>
       </section>
        <!--SEÇÃO RECURSOS PERSONALIZADOS-->
-
-  
     </main>
 
 
