--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <!-- inicio lado esquerdo conteudo inicial-->
       <section class="conteudo">
         <div class="column-1">
-          <h1 class="conteudo-inicial">
-            A maneira mais fácil de gerenciar projetos
-          </h1>
+          <h2 class="conteudo-inicial">
+            A maneira mais fácil de <span> gerenciar projetos </span> 
+          </h2>
           <h6 class="conteudo-inicial-menor">
             Desde as pequenas coisas até a visão geral, organiza o trabalho para que as equipes saibam o que fazer, por que é importante e como concluí-lo.
           </h6>
@@ -110,9 +110,9 @@
              <!--fim logos recursos container 2-->
   
              <!-- inicio titulo e paragrafos recursos container 2-->
-            <h3 class="personalizado-texto-title"> Múltiplas Layouts </h3>
+            <h3 class="personalizado-texto-title"> Múltiplas layouts </h3>
               <h6 class="personalizado-texto-paragrafo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</h6>
-            <h3 class="personalizado-texto-title"> Melhres componentes</h3>
+            <h3 class="personalizado-texto-title"> Melhores componentes</h3>
               <h6 class="personalizado-texto-paragrafo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</h6>
             <h3 class="personalizado-texto-title"> Bem organizado </h3>
             <h6 class="personalizado-texto-paragrafo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nibh tristique ipsum.</h6>
